--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Open Console
+    <h1>SPACE INVADERS</h1>
   </body>
 </html>
