--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <h1>SPACE INVADERS</h1>
+
+    <header>
+      <h1>SPACE INVADERS</h1>
+    </header>
+
+
+    <main>
+      <div class="grid"></div>
+    </main>
+
+
+    <footer>
+
+    </footer>
   </body>
 </html>
