single enemy movement implemented through array

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
     <main>
       <div class="grid"></div>
+      <button type="start" name="Start">Start</button>
+      <button type="stop"  name="stop">Stop</button>
     </main>
-
 
     <footer>
 
