start and stop buttons linked to the enemy movement element

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <main>
       <div class="grid"></div>
-      <button type="start" name="Start">Start</button>
-      <button type="stop"  name="stop">Stop</button>
+      <button id="start">Start</button>
+      <button id="stop">Stop</button>
     </main>
 
     <footer>
