multiple enemies moving incorrectly on grid

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <div class="grid"></div>
       <button id="start">Start</button>
-      <button id="stop">Stop</button>
+      <button id="reset">Reset</button>
     </main>
 
     <footer>
