zelda assets working in gameplay

--- a/index.html
+++ b/index.html
@@ -9,18 +9,25 @@
   <body>
 
     <header>
-      <h1>SPACE INVADERS</h1>
+      <img src="assets/logo-space-invaders-large.png" alt="logo">
     </header>
 
 
     <main>
-      <div class="grid"></div>
-      <button id="start">Start</button>
-      <button id="reset">Reset</button>
+      <section class="instructions">
+        <h2>Instructions:</h2>
+        <p></p>
+        <h3>Score: <span class="score">0</span></h3>
+        <button id="start">Start</button>
+        <button id="reset">Reset</button>
+      </section>
+      <section class="game">
+        <div class="grid"></div>
+      </section>
     </main>
 
     <footer>
-
+      MADE BY TALHA IKHLAQ AT GA LONDON 2019
     </footer>
   </body>
 </html>
