hylia-serif font integrated into stylesheet and all font-type changed to match with orange color. grid also removed

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <title>Space Invaders</title>
     <script type="text/javascript" src="scripts/app.js"></script>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="mycustomfont" href="assets/Triforce.ttf">
   </head>
   <body>
 
     <header>
-      <img src="assets/logo-space-invaders-large.png" alt="logo">
+      <h1>HYRULE INVADERS</h1>
     </header>
 
 
     <main>
       <section class="instructions">
         <h2>Instructions:</h2>
-        <p></p>
+          <p>Scavenging Bokoblin have overun Hyrule. It is your job to defeat them by firing (S key) your Ancient Arrows before they hit you with their mallets</p>
         <h3>Score: <span class="score">0</span></h3>
         <button id="start">Start</button>
         <button id="reset">Reset</button>
