enemymovement function debugged

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <section class="instructions">
         <h2>Instructions:</h2>
-          <p>Scavenging Bokoblin have overun Hyrule. It is your job to defeat them by firing (S key) your Ancient Arrows before they hit you with their mallets</p>
+          <p>Scavenging Bokoblin have overun Hyrule. It is your job to defeat them by moving and firing (←, →, and S keys) your Ancient Arrows before they hit you with their mallets</p>
         <h3>Score: <span class="score">0</span></h3>
         <button id="start">Start</button>
         <button id="reset">Reset</button>
