player collision function is logged in console

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <h3>Score: <span class="score">0</span></h3>
         <button id="start">Start</button>
         <button id="reset">Reset</button>
+        <div class="overlay"></div>
       </section>
       <section class="game">
         <div class="grid"></div>
